--- a/Data/Kaihatsu.CardManager.DAL.MSSQL/Kaihatsu.CardManager.DAL.MSSQL.csproj
+++ b/Data/Kaihatsu.CardManager.DAL.MSSQL/Kaihatsu.CardManager.DAL.MSSQL.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Kaihatsu.CardManager.DAL\Kaihatsu.CardManager.DAL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
