--- a/Services/Kaihatsu.CardManager.CardAPI/appsettings.json
+++ b/Services/Kaihatsu.CardManager.CardAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CardManager"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
