--- a/Services/Kaihatsu.CardManager.CardAPI/Kaihatsu.CardManager.CardAPI.csproj
+++ b/Services/Kaihatsu.CardManager.CardAPI/Kaihatsu.CardManager.CardAPI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,6 +22,7 @@
     <ProjectReference Include="..\..\Data\Kaihatsu.CardManager.DAL.Entities\Kaihatsu.CardManager.DAL.Entities.csproj" />
     <ProjectReference Include="..\..\Data\Kaihatsu.CardManager.DAL.MSSQL\Kaihatsu.CardManager.DAL.MSSQL.csproj" />
     <ProjectReference Include="..\..\Data\Kaihatsu.CardManager.DAL\Kaihatsu.CardManager.DAL.csproj" />
+    <ProjectReference Include="..\Kaihatsu.CardManager.Identity\Kaihatsu.CardManager.Identity.csproj" />
   </ItemGroup>
 
 </Project>
