--- a/Infrastructure/Kaihatsu.CardManager.AutoMapper/Kaihatsu.CardManager.AutoMapper.csproj
+++ b/Infrastructure/Kaihatsu.CardManager.AutoMapper/Kaihatsu.CardManager.AutoMapper.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\Kaihatsu.CardManager.Entities.Dto\Kaihatsu.CardManager.Entities.Dto.csproj" />
+    <ProjectReference Include="..\..\Common\Kaihatsu.CardManager.Request\Kaihatsu.CardManager.Request.csproj" />
+    <ProjectReference Include="..\..\Data\Kaihatsu.CardManager.DAL.Entities\Kaihatsu.CardManager.DAL.Entities.csproj" />
   </ItemGroup>
 
 </Project>
