--- a/Infrastructure/Kaihatsu.CardManager.FluentValidation/Kaihatsu.CardManager.FluentValidation.csproj
+++ b/Infrastructure/Kaihatsu.CardManager.FluentValidation/Kaihatsu.CardManager.FluentValidation.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\Kaihatsu.CardManager.Request\Kaihatsu.CardManager.Request.csproj" />
+  </ItemGroup>
+
 </Project>
